--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,3 +13,4 @@ set(MP_SAMPLES "${CMAKE_CURRENT_SOURCE_DIR}/samples")
 add_subdirectory(ui)
 add_subdirectory(samples)
 add_subdirectory(include)
+add_subdirectory(bitset)
