--- a/samples/CMakeLists.txt
+++ b/samples/CMakeLists.txt
@@ -5,5 +5,5 @@ file(GLOB srcs "*.cpp*")
 
 add_executable(${TARGET} ${srcs})
 
-target_link_libraries(${TARGET} ${MP_CUSTOM_PROJECT})
+target_include_directories(${TARGET} PUBLIC ${MP_INCLUDE})
 
