--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,7 @@ set(MP_SAMPLES "${CMAKE_CURRENT_SOURCE_DIR}/samples")
 set(MP_BITFIELD "${CMAKE_CURRENT_SOURCE_DIR}/bitfield")
 set(MP_ALGORITHM "${CMAKE_CURRENT_SOURCE_DIR}/algorithm")
 set(MP_FILE "${CMAKE_CURRENT_SOURCE_DIR}/file")
+set(MP_THREAD_POOL "${CMAKE_CURRENT_SOURCE_DIR}/thread_pool")
 
 include_directories(include)
 include_directories(ui)
@@ -21,6 +22,7 @@ include_directories(file)
 include_directories(algorithm)
 include_directories(samples)
 include_directories(bitfield)
+include_directories(thread_pool)
 
 
 add_subdirectory(bitfield)
@@ -29,3 +31,4 @@ add_subdirectory(algorithm)
 add_subdirectory(include)
 add_subdirectory(ui)
 add_subdirectory(samples)
+add_subdirectory(thread_pool)
