--- a/include/CMakeLists.txt
+++ b/include/CMakeLists.txt
@@ -7,6 +7,6 @@ file(GLOB srcs "*.h*")
 
 include_directories(${MP_ALGORITHM})
 include_directories(${MP_FILE})
+include_directories(${MP_THREAD_POOL})
 
 add_custom_target(${TARGET} SOURCES ${srcs})
-
